Fix image stretching in wapper-banner
Edit/Commit by LQL

--- a/style.css
+++ b/style.css
@@ -839,7 +839,7 @@ h3
     background-image: url(../images/banner_bacgroud.png);
     background-repeat: no-repeat;
     min-height: 525px;
-    background-size: cover;
+    background-size: 100% 550px;
     width: 100%;
 }
 
